{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 58,
  "lineage": "c82952da-5a34-564c-0525-041e237ab497",
  "resources": [
    {
      "module": "module.test-module",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "module.test-module.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:767167112715:vpc/vpc-e0615587",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-cede8ca6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-9bb637fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-e0615587",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-47330820",
            "owner_id": "767167112715",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.test-module",
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "module.test-module.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:767167112715:loadbalancer/tf-practice-elb-web",
            "availability_zones": [
              "sa-east-1a",
              "sa-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-practice-elb-web-1303047603.sa-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-practice-elb-web",
            "idle_timeout": 60,
            "instances": [
              "i-06d2cf1b6834a46c9",
              "i-0d5cf1fc034140de1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-practice-elb-web",
            "security_groups": [
              "sg-06bb982f97a376c1b"
            ],
            "source_security_group": "767167112715/allow_http_anywhere",
            "source_security_group_id": "sg-06bb982f97a376c1b",
            "subnets": [
              "subnet-1a993541",
              "subnet-7501a713"
            ],
            "tags": {
              "Name": "tf-practice-elb-web"
            },
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "depends_on": [
            "aws_security_group.allow_http_anywhere",
            "data.aws_subnet_ids.selected"
          ]
        }
      ]
    },
    {
      "module": "module.test-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_anywhere",
      "provider": "module.test-module.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:767167112715:security-group/sg-06bb982f97a376c1b",
            "description": "Allow all inbound traffic to http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bb982f97a376c1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_anywhere",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-e0615587"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.test-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_anywhere",
      "provider": "module.test-module.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:767167112715:security-group/sg-06f832f738df027f3",
            "description": "Allow all inbound traffic to ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f832f738df027f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_anywhere",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-e0615587"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}